fix scroll view not scrolling

--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -88,27 +88,28 @@
         app:layout_constraintVertical_chainStyle="spread"
         app:layout_constraintVertical_weight="0.8">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:isScrollContainer="true" >
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/ppg_container"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toTopOf="@id/ecg_container"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_chainStyle="spread"
-                app:layout_constraintVertical_weight="0.5">
+                app:layout_constraintTop_toTopOf="parent">
+<!--                app:layout_constraintVertical_chainStyle="spread"-->
+<!--                app:layout_constraintVertical_weight="0.5">-->
 
                 <com.androidplot.xy.XYPlot
                     android:id="@+id/ppg_green_plot"
                     style="@style/FullScreenGraph"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="250dp"
                     android:layout_marginTop="10dp"
 
                     app:graphBackgroundColor="@color/white"
@@ -122,8 +123,6 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toTopOf="@id/ppg_ir_plot"
-                    app:layout_constraintVertical_chainStyle="spread"
-                    app:layout_constraintVertical_weight="0.3"
                     app:lineLabelInsetLeft="15dp"
                     app:renderMode="use_background_thread"
                     app:title="@string/ppg_green_plot_title"
@@ -134,7 +133,7 @@
                     android:id="@+id/ppg_ir_plot"
                     style="@style/FullScreenGraph"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="250dp"
                     android:layout_marginTop="10dp"
 
                     app:graphBackgroundColor="@color/white"
@@ -148,8 +147,6 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/ppg_green_plot"
                     app:layout_constraintBottom_toTopOf="@id/ppg_red_plot"
-                    app:layout_constraintVertical_chainStyle="spread"
-                    app:layout_constraintVertical_weight="0.3"
                     app:lineLabelInsetLeft="15dp"
                     app:renderMode="use_background_thread"
                     app:title="@string/ppg_ir_plot_title"
@@ -160,7 +157,7 @@
                     android:id="@+id/ppg_red_plot"
                     style="@style/FullScreenGraph"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="250dp"
                     android:layout_marginTop="10dp"
 
                     app:graphBackgroundColor="@color/white"
@@ -174,8 +171,6 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/ppg_ir_plot"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintVertical_chainStyle="spread"
-                    app:layout_constraintVertical_weight="0.3"
                     app:lineLabelInsetLeft="15dp"
                     app:renderMode="use_background_thread"
                     app:title="@string/ppg_red_plot_title"
@@ -229,19 +224,19 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/ecg_container"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/ppg_container"
-                app:layout_constraintVertical_chainStyle="spread"
-                app:layout_constraintVertical_weight="0.5">
+                app:layout_constraintTop_toBottomOf="@id/ppg_container">
+<!--                app:layout_constraintVertical_chainStyle="spread"-->
+<!--                app:layout_constraintVertical_weight="0.5">-->
 
                 <com.androidplot.xy.XYPlot
                     android:id="@+id/ecg_plot"
                     style="@style/FullScreenGraph"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="250dp"
                     android:layout_marginTop="10dp"
 
                     app:graphBackgroundColor="@color/white"
@@ -250,10 +245,9 @@
                     app:graphMarginRight="10dp"
                     app:graphMarginTop="10dp"
                     app:gridBackgroundColor="@color/white"
-                    app:layout_constraintHorizontal_bias="0.0"
+
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="1.0"
                     app:lineLabelInsetLeft="15dp"
@@ -305,18 +299,17 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/analysis_container"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/ecg_container"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintVertical_weight="0.5"
                 android:visibility="invisible">
 
                 <com.androidplot.xy.XYPlot
                     android:id="@+id/qrs_plot"
                     style="@style/FullScreenGraph"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="250dp"
 
                     app:backgroundColor="#000000"
                     app:domainLineColor="#555555"
@@ -334,8 +327,6 @@
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_chainStyle="spread"
-                    app:layout_constraintVertical_weight="0.5"
                     app:paddingLeft="5dp"
                     app:rangeLineColor="#555555"
                     app:rangeOriginLineColor="#555555"
@@ -351,7 +342,7 @@
                     android:id="@+id/hr_plot"
                     style="@style/FullScreenGraph"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="250dp"
                     app:backgroundColor="#000000"
                     app:domainLineColor="#555555"
                     app:domainOriginLineColor="#555555"
@@ -362,18 +353,16 @@
                     app:graphBackgroundColor="#000000"
                     app:graphMarginBottom="20dp"
                     app:graphMarginLeft="30dp"
-
                     app:graphMarginRight="30dp"
                     app:graphMarginTop="20dp"
                     app:gridBackgroundColor="#000000"
                     app:gridInsetBottom="20dp"
                     app:gridInsetLeft="25dp"
+
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/qrs_plot"
-                    app:layout_constraintVertical_chainStyle="spread"
-                    app:layout_constraintVertical_weight="0.5"
                     app:paddingBottom="5dp"
                     app:paddingLeft="5dp"
                     app:paddingRight="5dp"
@@ -388,6 +377,6 @@
                     app:titleTextColor="#000000"
                     app:titleTextSize="15dp" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
