--- a/mobile/src/main/res/menu/main_menu.xml
+++ b/mobile/src/main/res/menu/main_menu.xml
@@ -65,8 +65,8 @@
         android:title="@string/redo_setup_plots_item"
         app:showAsAction="never" />
     <item
-        android:id="@+id/restart_api"
-        android:title="@string/restart_api_item"
+        android:id="@+id/restart_polar_api"
+        android:title="@string/restart_polar_api_item"
         app:showAsAction="never" />
     <item
         android:id="@+id/help"
